kenshou-VPC+EC2.yml
AWSTemplateFormatVersion: '2010-09-09'
Description:
  VPC & subnet create

Parameters: 
  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the instance
    Type: "AWS::EC2::KeyPair::KeyName"

  MyIP:
    Description: IP address allowed to access EC2
    Type: String

Resources:
  KenshouVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: KenshouVPC

  KenshouRtPublic:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref KenshouVPC
      Tags:
      - Key: Name
        Value: KenshouRtPublic

  KenshouRtPrivate:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref KenshouVPC
      Tags:
      - Key: Name
        Value: KenshouRtPrivate

  KenshouSubnetPublic1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref KenshouVPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: "ap-northeast-1a"
      Tags:
      - Key: Name
        Value: KenshouSubnetPublic1a

  KenshouSubnetPublic1aRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref KenshouSubnetPublic1a
      RouteTableId: !Ref KenshouRtPublic

  KenshouSubnetPublic1c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref KenshouVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: "ap-northeast-1c"
      Tags:
      - Key: Name
        Value: KenshouSubnetPublic1c

  KenshouSubnetPublic1cRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref KenshouSubnetPublic1c
      RouteTableId: !Ref KenshouRtPublic

  KenshouSubnetPrivate1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref KenshouVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: "ap-northeast-1a"
      Tags:
      - Key: Name
        Value: KenshouSubnetPrivate1a

  KenshouSubnetPrivate1aRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref KenshouSubnetPrivate1a
      RouteTableId: !Ref KenshouRtPrivate

  KenshouSubnetPrivate1c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref KenshouVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: "ap-northeast-1c"
      Tags:
      - Key: Name
        Value: KenshouSubnetPrivate1c

  KenshouSubnetPrivate1cRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref KenshouSubnetPrivate1c
      RouteTableId: !Ref KenshouRtPrivate

  KenshouIgw:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
      - Key: Name
        Value: KenshouIgw
  KenshouAttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref KenshouVPC
      InternetGatewayId: !Ref KenshouIgw
  KenshouRoutePublic:
    Type: AWS::EC2::Route
    DependsOn: KenshouIgw
    Properties:
      RouteTableId: !Ref KenshouRtPublic
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref KenshouIgw

  KenshouInstancePublic1a: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-0b7546e839d7ace12
      KeyName: !Ref KeyName
      InstanceType: t2.micro
      NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref KenshouSubnetPublic1a
          GroupSet:
            - !Ref KenshouSgPublic1a
      UserData: !Base64 |
        #!/bin/bash
        sudo yum install -y git 
      Tags:
          - Key: Name
            Value: KenshouInstancePublic1a
  
  KenshouSgPublic1a:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: KenshouSgPublic1a
      GroupDescription: Allow SSH and HTTP access only MyIP
      VpcId: !Ref KenshouVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref MyIP

Outputs:
  StackVPC:
    Description: The ID of the VPC
    Value: !Ref KenshouVPC
    Export:
      Name: !Sub "${AWS::StackName}-VPCID"

  StackPublicSubnet1A:
    Description: The ID of the VPC Subnet
    Value: !Ref KenshouSubnetPublic1a
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnet1A"

  StackPublicSubnet1C:
    Description: The ID of the VPC Subnet
    Value: !Ref KenshouSubnetPublic1c
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnet1C"

  StackPrivateSubnet1A:
    Description: The ID of the VPC Subnet
    Value: !Ref KenshouSubnetPrivate1a
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet1A"

  StackPrivateSubnet1C:
    Description: The ID of the VPC Subnet
    Value: !Ref KenshouSubnetPrivate1c
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet1C"
  
  EC2PublicIP:
    Value: !GetAtt KenshouInstancePublic1a.PublicIp
    Description: Public IP of EC2 instance
